@@ -20,10 +20,9 @@ my %WriteMakefileArgs = (
   "LICENSE" => "lgpl",
   "NAME" => "Gtk3",
   "PREREQ_PM" => {
-    "Glib" => "1.240",
     "Glib::Object::Introspection" => "0.002"
   },
-  "VERSION" => "0.003",
+  "VERSION" => "0.004",
   "test" => {
     "TESTS" => "t/*.t"
   }
