@@ -1,14 +1,48 @@
+Gtk3
+====
+
+Perl bindings to the 3.x series of the gtk+ toolkit.  This module allows you to
+write graphical user interfaces in a Perlish and object-oriented way, freeing
+you from the casting and memory management in C, yet remaining very close in
+spirit to original API.
 
 
-This archive contains the distribution Gtk3,
-version 0.003:
+INSTALLATION
+------------
 
-  Perl interface to the 3.x series of the gtk+ toolkit
+To install this module type the following:
 
-This software is Copyright (c) 2011 by Torsten Schoenfeld.
+   perl Makefile.PL
+   make
+   make test
+   make install
 
-This is free software, licensed under:
 
-  The GNU Lesser General Public License, Version 2.1, February 1999
+DEPENDENCIES
+------------
+
+Gtk3 needs this C library:
+
+  gtk+-3.0 >= 3.0.0
+
+and these Perl modules:
+
+  Glib::Object::Introspection >= 0.002
 
 
+BUG REPORTS
+-----------
+
+Please report bugs to the gnome-perl product in GNOME's Bugzilla:
+<http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-perl>
+
+
+COPYRIGHT AND LICENSE
+---------------------
+
+Copyright (C) 2005-2012 Torsten Schoenfeld <kaffeetisch@gmx.de>
+
+This library is free software; you can redistribute it and/or modify it under
+the terms of the GNU Library General Public License as published by the Free
+Software Foundation; either version 2.1 of the License, or (at your option) any
+later version.
