@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.003
+version = 0.004
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -10,13 +10,11 @@ copyright_year = 2011
 [ManifestSkip]
 [MetaYAML]
 [License]
-[Readme]
 [MakeMaker]
 [Manifest]
 [PkgVersion]
 
 [Prereqs]
-Glib = 1.240
 Glib::Object::Introspection = 0.002
 
 [NextRelease]
