@@ -1,3 +1,12 @@
+Overview of changes in Gtk3 0.004 [2012-03-18]
+==============================================
+
+* Provide GdkPixbuf bindings under Gtk3::Gdk::Pixbuf.
+* Make Gtk3::[HV]Box::new provide default arg values.
+* Make Gtk3::Gdk::Window::new construct the mask automatically if none is
+  given.
+* Clarify licensing terms.
+
 Overview of changes in Gtk3 0.003 [2012-01-14]
 ==============================================
 
@@ -10,8 +19,8 @@ Overview of changes in Gtk3 0.003 [2012-01-14]
 Overview of changes in Gtk3 0.002 [2011-12-09]
 ==============================================
 
-* Add more overrides for the tree objects
-* Fix a test failure (RT #72773)
+* Add more overrides for the tree objects.
+* Fix a test failure.  (RT #72773)
 
 Overview of changes in Gtk3 0.001 [2011-10-14]
 ==============================================
